Added portuguese translation Labels can now be counted as boxes Notification displays total number of unread messages Added dummy notification when there are no new emails Message subject is now displayed (by default) when there is only one new email Gmail search query can now be edited Login username and password are now encoded Passwords aren't echoed via kdDebug anymore Added option to open Gmail in simple interface when launching browser Improved DCOP interface Removed snooze menu option gmail-mail-snippet notification now also shows attachments Icon can now be hidden/shown via DCOP Updated docbook

--- a/po/pl.po
+++ b/po/pl.po
@@ -401,7 +401,7 @@ msgid ""
 "Google Inc."
 msgstr "Informacja o legalności\n"
 "Google, Gmail i Google Mail są zastrzeżonymi znakami handlowymi Google Inc.\n"
-"KCheckGmail ani jego autorzy nie są w żaden sposób powiązani z Google Inc.\n"
+"KCheckGmail ani jego autorzy nie są w żaden sposób powiązani z Google Inc."
 
 #: main.cpp:76
 msgid "KCheckGMail is already running!\n"
